--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
               </a>
             </div>
           </div>
-          <div class="md:w-1/2">
-            <img src="/assets/placeholder-jennie.png" alt="" class="w-full md:aspect-9/10 aspect-5/4 object-cover md:rounded-2xl rounded-xl">
+          <div class="md:w-1/2 md:aspect-9/10 aspect-5/4 md:rounded-2xl rounded-xl overflow-hidden">
+            <img src="/assets/placeholder-jennie.png" alt="" loading="lazy" decoding="async" class="w-full h-full object-cover">
           </div>
         </div>
       </div>
@@ -117,10 +117,8 @@
                 <template x-for="(item, index) in cards" :key="index">
                   <!-- Card -->
                   <div class="swiper-slide">
-                    <div
-                      class="relative aspect-5/4 rounded-2xl overflow-hidden bg-cover bg-center"
-                      style="background-image: url('/assets/placeholder-jennie.png');"
-                    >
+                    <div class="relative aspect-5/4 rounded-2xl overflow-hidden">
+                      <img src="/assets/placeholder-jennie.png" alt="" loading="lazy" decoding="async" class="absolute inset-0 w-full h-full object-cover">
                       <div class="absolute inset-0 md:bg-linear-to-t bg-linear-to-b from-black/90 via-black/20 to-transparent"></div>
                       <div class="absolute inset-0 md:p-8 p-4 flex flex-col justify-end">
                         <div class="flex h-full md:h-auto md:flex-row flex-col md:items-end items-start justify-between gap-6">
@@ -170,10 +168,8 @@
         <div class="w-full relative mt-6">
           <div class="flex items-center gap-4">
             <div class="flex-1 overflow-hidden">
-              <div
-                class="relative md:aspect-10/4 aspect-5/4 rounded-2xl overflow-hidden bg-cover bg-center"
-                style="background-image: url('/assets/placeholder-jennie.png');"
-              >
+              <div class="relative md:aspect-10/4 aspect-5/4 rounded-2xl overflow-hidden">
+                <img src="/assets/placeholder-jennie.png" alt="" loading="lazy" decoding="async" class="absolute inset-0 w-full h-full object-cover">
                 <div class="absolute inset-0 md:bg-linear-to-t bg-linear-to-b from-black/90 via-black/20 to-transparent"></div>
                 <div class="absolute inset-0 md:p-8 p-4 flex flex-col md:justify-end">
                   <div class="flex h-full md:h-auto md:flex-row flex-col md:items-end items-start justify-between gap-6">
