--- a/collections.html
+++ b/collections.html
@@ -28,13 +28,26 @@
     <div class="grid xl:grid-cols-[226px_1fr] gap-3">
       <div class="hidden md:block">
         <!-- Sidebar content -->
-        <div class="card-container-small" x-data="{ open: true, list: 7 }">
+
+        <!-- BLOCK 1 -->
+        <div class="card-container-small"
+          x-data="{
+            open: true,
+            filters: [
+              'Consumables',
+              'Dermal Fillers',
+              'Pharmacy',
+              'Skincare',
+              'Toxins'
+            ]
+          }"
+        >
           <!-- Accordion header -->
           <button
             @click="open = !open"
             class="flex items-center justify-between w-full"
           >
-            <span class="heading-primary text-lg text-brand-dark">Filter</span>
+            <span class="heading-primary text-lg text-brand-dark">Categories</span>
             <svg
               class="w-4 h-4 transition-transform duration-200"
               :class="{ 'rotate-180': !open }"
@@ -50,7 +63,7 @@
           <!-- Checkbox list -->
           <div x-show="open" x-collapse>
             <div class="mt-4 space-y-3">
-              <template x-for="(item, index) in list">
+              <template x-for="(item, index) in filters">
                 <label class="flex items-center gap-3 cursor-pointer" x-data="{ checked: true }">
                   <input type="checkbox" class="hidden" x-model="checked">
                   <span
@@ -61,12 +74,145 @@
                       <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                     </svg>
                   </span>
-                  <span class="text-brand-dark text-sm font-medium">Option 1</span>
+                  <span class="text-brand-dark text-sm font-medium" x-text="item"></span>
                 </label>
               </template>
             </div>
           </div>
         </div>
+
+        <!-- BLOCK 2 -->
+        <div class="card-container-small"
+          x-data="{
+            open: true,
+            search: '',
+            filters: [
+              'Allpresan',
+              'Ameluz',
+              'Avène',
+              'Baxter',
+              'Bdr',
+              'Bdr BB',
+              'Brush On Block',
+              'Cetaphil',
+              'ChitoCare',
+              'Clinisept',
+              'Clinisept BB',
+              'Clinisoothe',
+              'Colorescience',
+              'Colorescience Marketing',
+              'Colorescience Tester',
+              'Croma Farewell',
+              'Croma Masks',
+              'Croma Skincare',
+              'Definisse SkinCare',
+              'Dermaroller',
+              'Derma-Seal',
+              'Dispensary Medicine',
+              'Dispensary Special',
+              'Hair Full Cycle',
+              'Heliocare',
+              'Hyalual Cream',
+              'HydroPeptide',
+              'HydroPeptide BB',
+              'HydroPeptide Makeup',
+              'Hydropeptide RX',
+              'HydroPeptide Tester',
+              'HydroPeptide Travel',
+              'IMAGE Skincare',
+              'IMAGE Skincare BB',
+              'IMAGE Skincare Marketing',
+              'IMAGE Skincare Sample',
+              'IMAGE Skincare Tester',
+              'IMAGE Skincare Travel',
+              'Kelo-Cote',
+              'Lidocaine',
+              'Medik8',
+              'Medik8 Professional',
+              'Medik8 Try Me',
+              'Monsieur Skin Care',
+              'MZ Skin',
+              'Neauvia Skincare',
+              'Pharmaclinix',
+              'RevitaLash',
+              'Teoxane Skincare',
+              'The Skin Diary',
+              'Topical Anaesthetic',
+              'Vaccines',
+              'Viscoderm',
+              'Vitage',
+              'Vitage BB',
+              'Vitaroller',
+              'Water For injection',
+              'Wow Fusion',
+              'Xcellaris Pro Skincare',
+              'Xcellaris Pro Skincare BB',
+              'Xcellaris Pro Twist',
+              'ZO Skin Health',
+              'ZO Skin health BB',
+              'Zo Skin Marketing',
+              'Zooki'
+            ],
+            get filteredFilters() {
+              if (!this.search) return this.filters;
+              return this.filters.filter(f => f.toLowerCase().includes(this.search.toLowerCase()));
+            }
+          }"
+        >
+          <!-- Accordion header -->
+          <button
+            @click="open = !open"
+            class="flex items-center justify-between w-full"
+          >
+            <span class="heading-primary text-lg text-brand-dark">Brands</span>
+            <svg
+              class="w-4 h-4 transition-transform duration-200"
+              :class="{ 'rotate-180': !open }"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7" />
+            </svg>
+          </button>
+
+          <!-- Content -->
+          <div x-show="open" x-collapse>
+            <!-- Search input -->
+            <div class="mt-4 flex items-center gap-2 px-3 py-2 bg-brand-background-secondary border border-brand-border rounded-full">
+              <svg xmlns="http://www.w3.org/2000/svg" class="size-4 shrink-0 text-neutral-500"
+                fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+              </svg>
+              <input type="text" x-model="search"
+                placeholder="Search brands"
+                class="w-full text-sm bg-transparent outline-none placeholder:text-neutral-500 text-brand-dark">
+            </div>
+
+            <!-- Checkbox list -->
+            <div class="mt-4 space-y-3 max-h-64 overflow-y-auto">
+              <template x-for="(item, index) in filteredFilters" :key="index">
+                <label class="flex items-center gap-3 cursor-pointer" x-data="{ checked: false }">
+                  <input type="checkbox" class="hidden" x-model="checked">
+                  <span
+                    class="shrink-0 w-4.5 h-4.5 rounded-sm border flex items-center justify-center transition-colors"
+                    :class="checked ? 'bg-brand-primary-700 border-brand-primary-700' : 'bg-brand-background-secondary border-brand-border'"
+                  >
+                    <svg x-show="checked" class="w-4 h-4 text-brand-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
+                    </svg>
+                  </span>
+                  <span class="min-w-0 truncate text-brand-dark text-sm font-medium" x-text="item"></span>
+                </label>
+              </template>
+            </div>
+
+            <!-- View all link -->
+            <a href="#" class="basic-link mt-6 block">View all brands</a>
+          </div>
+        </div>
+
       </div>
       <div>
         <div class="card-container-small">
