--- a/collections.html
+++ b/collections.html
@@ -25,32 +25,42 @@
   
   <div class="body-container">
     <!-- Container here -->
-    <div class="grid xl:grid-cols-[226px_1fr] gap-3">
+    <div class="grid xl:grid-cols-[226px_1fr] gap-3" x-data="collectionFilters()">
       <div class="hidden md:block">
         <!-- Sidebar content -->
 
-        <!-- BLOCK 1 -->
-        <div class="card-container-small"
-          x-data="{
-            open: true,
-            filters: [
-              'Consumables',
-              'Dermal Fillers',
-              'Pharmacy',
-              'Skincare',
-              'Toxins'
-            ]
-          }"
-        >
+        <!-- BLOCK 0: Selected Filters -->
+        <div x-show="hasActiveFilters" class="card-container-small">
+          <div class="flex items-center justify-between mb-3">
+            <span class="heading-primary text-lg text-brand-dark">Active Filters</span>
+            <button @click="clearAllFilters()" class="basic-link">Clear all</button>
+          </div>
+          <div class="flex flex-wrap gap-1.5">
+            <template x-for="filter in allSelectedFilters" :key="filter.type + '-' + filter.name">
+              <button
+                @click="removeFilter(filter.type, filter.name)"
+                class="cursor-pointer bg-brand-background hover:bg-brand-background-dark rounded-full font-medium pl-2.5 pr-2 py-2 flex items-center gap-1.5 text-sm"
+              >
+                <span x-text="filter.name"></span>
+                <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+              </button>
+            </template>
+          </div>
+        </div>
+
+        <!-- BLOCK 1: Categories -->
+        <div class="card-container-small">
           <!-- Accordion header -->
           <button
-            @click="open = !open"
+            @click="categoriesAccordionOpen = !categoriesAccordionOpen"
             class="flex items-center justify-between w-full"
           >
             <span class="heading-primary text-lg text-brand-dark">Categories</span>
             <svg
               class="w-4 h-4 transition-transform duration-200"
-              :class="{ 'rotate-180': !open }"
+              :class="{ 'rotate-180': !categoriesAccordionOpen }"
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
@@ -61,16 +71,16 @@
           </button>
 
           <!-- Checkbox list -->
-          <div x-show="open" x-collapse>
+          <div x-show="categoriesAccordionOpen" x-collapse>
             <div class="mt-4 space-y-3">
-              <template x-for="(item, index) in filters">
-                <label class="flex items-center gap-3 cursor-pointer" x-data="{ checked: true }">
-                  <input type="checkbox" class="hidden" x-model="checked">
+              <template x-for="item in categories" :key="item">
+                <label class="flex items-center gap-3 cursor-pointer">
+                  <input type="checkbox" class="hidden" :checked="isCategorySelected(item)" @change="toggleCategory(item)">
                   <span
                     class="w-4.5 h-4.5 rounded-sm border flex items-center justify-center transition-colors"
-                    :class="checked ? 'bg-brand-primary-700 border-brand-primary-700' : 'bg-brand-background-secondary border-brand-border'"
+                    :class="isCategorySelected(item) ? 'bg-brand-primary-700 border-brand-primary-700' : 'bg-brand-background-secondary border-brand-border'"
                   >
-                    <svg x-show="checked" class="w-4 h-4 text-brand-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <svg x-show="isCategorySelected(item)" class="w-4 h-4 text-brand-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                     </svg>
                   </span>
@@ -81,93 +91,17 @@
           </div>
         </div>
 
-        <!-- BLOCK 2 -->
-        <div class="card-container-small"
-          x-data="{
-            open: true,
-            search: '',
-            filters: [
-              'Allpresan',
-              'Ameluz',
-              'Avène',
-              'Baxter',
-              'Bdr',
-              'Bdr BB',
-              'Brush On Block',
-              'Cetaphil',
-              'ChitoCare',
-              'Clinisept',
-              'Clinisept BB',
-              'Clinisoothe',
-              'Colorescience',
-              'Colorescience Marketing',
-              'Colorescience Tester',
-              'Croma Farewell',
-              'Croma Masks',
-              'Croma Skincare',
-              'Definisse SkinCare',
-              'Dermaroller',
-              'Derma-Seal',
-              'Dispensary Medicine',
-              'Dispensary Special',
-              'Hair Full Cycle',
-              'Heliocare',
-              'Hyalual Cream',
-              'HydroPeptide',
-              'HydroPeptide BB',
-              'HydroPeptide Makeup',
-              'Hydropeptide RX',
-              'HydroPeptide Tester',
-              'HydroPeptide Travel',
-              'IMAGE Skincare',
-              'IMAGE Skincare BB',
-              'IMAGE Skincare Marketing',
-              'IMAGE Skincare Sample',
-              'IMAGE Skincare Tester',
-              'IMAGE Skincare Travel',
-              'Kelo-Cote',
-              'Lidocaine',
-              'Medik8',
-              'Medik8 Professional',
-              'Medik8 Try Me',
-              'Monsieur Skin Care',
-              'MZ Skin',
-              'Neauvia Skincare',
-              'Pharmaclinix',
-              'RevitaLash',
-              'Teoxane Skincare',
-              'The Skin Diary',
-              'Topical Anaesthetic',
-              'Vaccines',
-              'Viscoderm',
-              'Vitage',
-              'Vitage BB',
-              'Vitaroller',
-              'Water For injection',
-              'Wow Fusion',
-              'Xcellaris Pro Skincare',
-              'Xcellaris Pro Skincare BB',
-              'Xcellaris Pro Twist',
-              'ZO Skin Health',
-              'ZO Skin health BB',
-              'Zo Skin Marketing',
-              'Zooki'
-            ],
-            get filteredFilters() {
-              if (!this.search) return this.filters;
-              return this.filters.filter(f => f.toLowerCase().includes(this.search.toLowerCase()));
-            }
-          }"
-        >
+        <!-- BLOCK 2: Brands -->
+        <div class="card-container-small">
           <!-- Accordion header -->
           <button
-            @click="open = !open"
+            @click="brandsAccordionOpen = !brandsAccordionOpen"
             class="flex items-center justify-between w-full"
           >
             <span class="heading-primary text-lg text-brand-dark">Brands</span>
             <svg
               class="w-4 h-4 transition-transform duration-200"
-              :class="{ 'rotate-180': !open }"
+              :class="{ 'rotate-180': !brandsAccordionOpen }"
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
@@ -178,28 +112,28 @@
           </button>
 
           <!-- Content -->
-          <div x-show="open" x-collapse>
+          <div x-show="brandsAccordionOpen" x-collapse>
             <!-- Search input -->
             <div class="mt-4 flex items-center gap-2 px-3 py-2 bg-brand-background-secondary border border-brand-border rounded-full">
               <svg xmlns="http://www.w3.org/2000/svg" class="size-4 shrink-0 text-neutral-500"
                 fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
               </svg>
-              <input type="text" x-model="search"
+              <input type="text" x-model="brandSearch"
                 placeholder="Search brands"
                 class="w-full text-sm bg-transparent outline-none placeholder:text-neutral-500 text-brand-dark">
             </div>
 
             <!-- Checkbox list -->
             <div class="mt-4 space-y-3 max-h-64 overflow-y-auto">
-              <template x-for="(item, index) in filteredFilters" :key="index">
-                <label class="flex items-center gap-3 cursor-pointer" x-data="{ checked: false }">
-                  <input type="checkbox" class="hidden" x-model="checked">
+              <template x-for="item in filteredBrands" :key="item">
+                <label class="flex items-center gap-3 cursor-pointer">
+                  <input type="checkbox" class="hidden" :checked="isBrandSelected(item)" @change="toggleBrand(item)">
                   <span
                     class="shrink-0 w-4.5 h-4.5 rounded-sm border flex items-center justify-center transition-colors"
-                    :class="checked ? 'bg-brand-primary-700 border-brand-primary-700' : 'bg-brand-background-secondary border-brand-border'"
+                    :class="isBrandSelected(item) ? 'bg-brand-primary-700 border-brand-primary-700' : 'bg-brand-background-secondary border-brand-border'"
                   >
-                    <svg x-show="checked" class="w-4 h-4 text-brand-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <svg x-show="isBrandSelected(item)" class="w-4 h-4 text-brand-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                     </svg>
                   </span>
@@ -247,5 +181,140 @@
       </div>
     </div>
   </div>
+
+  <script>
+    function collectionFilters() {
+      return {
+        // Selected filters state
+        selectedCategories: [],
+        selectedBrands: [],
+
+        // Accordion states
+        categoriesAccordionOpen: true,
+        brandsAccordionOpen: true,
+
+        // Brand search
+        brandSearch: '',
+
+        // Data arrays
+        categories: ['Consumables', 'Dermal Fillers', 'Pharmacy', 'Skincare', 'Toxins'],
+        brands: [
+          'Allpresan',
+          'Ameluz',
+          'Avène',
+          'Baxter',
+          'Bdr',
+          'Bdr BB',
+          'Brush On Block',
+          'Cetaphil',
+          'ChitoCare',
+          'Clinisept',
+          'Clinisept BB',
+          'Clinisoothe',
+          'Colorescience',
+          'Colorescience Marketing',
+          'Colorescience Tester',
+          'Croma Farewell',
+          'Croma Masks',
+          'Croma Skincare',
+          'Definisse SkinCare',
+          'Dermaroller',
+          'Derma-Seal',
+          'Dispensary Medicine',
+          'Dispensary Special',
+          'Hair Full Cycle',
+          'Heliocare',
+          'Hyalual Cream',
+          'HydroPeptide',
+          'HydroPeptide BB',
+          'HydroPeptide Makeup',
+          'Hydropeptide RX',
+          'HydroPeptide Tester',
+          'HydroPeptide Travel',
+          'IMAGE Skincare',
+          'IMAGE Skincare BB',
+          'IMAGE Skincare Marketing',
+          'IMAGE Skincare Sample',
+          'IMAGE Skincare Tester',
+          'IMAGE Skincare Travel',
+          'Kelo-Cote',
+          'Lidocaine',
+          'Medik8',
+          'Medik8 Professional',
+          'Medik8 Try Me',
+          'Monsieur Skin Care',
+          'MZ Skin',
+          'Neauvia Skincare',
+          'Pharmaclinix',
+          'RevitaLash',
+          'Teoxane Skincare',
+          'The Skin Diary',
+          'Topical Anaesthetic',
+          'Vaccines',
+          'Viscoderm',
+          'Vitage',
+          'Vitage BB',
+          'Vitaroller',
+          'Water For injection',
+          'Wow Fusion',
+          'Xcellaris Pro Skincare',
+          'Xcellaris Pro Skincare BB',
+          'Xcellaris Pro Twist',
+          'ZO Skin Health',
+          'ZO Skin health BB',
+          'Zo Skin Marketing',
+          'Zooki'
+        ],
+
+        // Computed: filtered brands for search
+        get filteredBrands() {
+          if (!this.brandSearch) return this.brands;
+          return this.brands.filter(b => b.toLowerCase().includes(this.brandSearch.toLowerCase()));
+        },
+
+        // Computed: all selected as array of {type, name}
+        get allSelectedFilters() {
+          return [
+            ...this.selectedCategories.map(name => ({ type: 'category', name })),
+            ...this.selectedBrands.map(name => ({ type: 'brand', name }))
+          ];
+        },
+
+        get hasActiveFilters() {
+          return this.selectedCategories.length > 0 || this.selectedBrands.length > 0;
+        },
+
+        // Methods
+        toggleCategory(name) {
+          const i = this.selectedCategories.indexOf(name);
+          i === -1 ? this.selectedCategories.push(name) : this.selectedCategories.splice(i, 1);
+        },
+
+        toggleBrand(name) {
+          const i = this.selectedBrands.indexOf(name);
+          i === -1 ? this.selectedBrands.push(name) : this.selectedBrands.splice(i, 1);
+        },
+
+        isCategorySelected(name) {
+          return this.selectedCategories.includes(name);
+        },
+
+        isBrandSelected(name) {
+          return this.selectedBrands.includes(name);
+        },
+
+        removeFilter(type, name) {
+          const arr = type === 'category' ? this.selectedCategories : this.selectedBrands;
+          const i = arr.indexOf(name);
+          if (i !== -1) arr.splice(i, 1);
+        },
+
+        clearAllFilters() {
+          this.selectedCategories = [];
+          this.selectedBrands = [];
+        }
+      }
+    }
+  </script>
 </body>
 </html>
