--- a/collections.html
+++ b/collections.html
@@ -138,14 +138,14 @@
           <nav class="md:flex hidden items-center gap-1.5 text-sm mb-4 w-full overflow-hidden">
             <a href="/"
               class="shrink-0 whitespace-nowrap text-brand-dark hover:text-brand-primary-700 hover:underline">Home</a>
-            <svg class="shrink-0 h-4 w-4 -rotate-90 text-brand-border" xmlns="http://www.w3.org/2000/svg"
+            <svg class="shrink-0 h-4 w-4 -rotate-90 text-[#D1D5DB]" xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
               stroke-linejoin="round">
               <polyline points="6 9 12 15 18 9"></polyline>
             </svg>
             <a href="#"
               class="shrink-0 whitespace-nowrap text-brand-dark hover:text-brand-primary-700 hover:underline">Products</a>
-            <svg class="shrink-0 h-4 w-4 -rotate-90 text-brand-border" xmlns="http://www.w3.org/2000/svg"
+            <svg class="shrink-0 h-4 w-4 -rotate-90 text-[#D1D5DB]" xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
               stroke-linejoin="round">
               <polyline points="6 9 12 15 18 9"></polyline>
@@ -167,13 +167,9 @@
             <!-- Mobile Filter Button -->
             <div class="xl:hidden mb-4">
               <button @click="mobileFiltersOpen = true"
-                class="flex items-center gap-2 px-4 py-2.5 bg-white border border-brand-border hover:border-brand-primary-700 rounded-full transition-colors">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor" stroke-width="2">
-                  <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z" />
-                </svg>
-                <span class="text-sm font-medium">Filters</span>
+                class="flex items-center gap-2 px-4 py-2.5 bg-white border border-brand-border hover:bg-brand-primary-100 rounded-full transition-colors">
+                <img src="/assets/icon-filter.svg" alt="" class="w-3 h-3">
+                <span class="text-xs uppercase tracking-wide font-bold">Filters</span>
                 <span x-show="hasActiveFilters"
                   class="bg-brand-primary-700 text-white text-xs font-bold px-1.5 py-0.5 rounded-full"
                   x-text="allSelectedFilters.length"></span>
