--- a/products.html
+++ b/products.html
@@ -136,15 +136,15 @@
             <!-- Breadcrumbs -->
             <nav class="md:flex hidden items-center gap-1.5 text-sm mb-2 w-full overflow-hidden">
               <a href="/" class="shrink-0 whitespace-nowrap text-brand-dark hover:text-brand-primary-700 hover:underline">Home</a>
-              <svg class="shrink-0 h-4 w-4 -rotate-90 text-brand-border" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <svg class="shrink-0 h-4 w-4 -rotate-90 text-[#D1D5DB]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <polyline points="6 9 12 15 18 9"></polyline>
               </svg>
               <a href="#" class="shrink-0 whitespace-nowrap text-brand-dark hover:text-brand-primary-700 hover:underline">Skincare</a>
-              <svg class="shrink-0 h-4 w-4 -rotate-90 text-brand-border" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <svg class="shrink-0 h-4 w-4 -rotate-90 text-[#D1D5DB]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <polyline points="6 9 12 15 18 9"></polyline>
               </svg>
               <a href="#" class="shrink-0 whitespace-nowrap text-brand-dark hover:text-brand-primary-700 hover:underline">Image</a>
-              <svg class="shrink-0 h-4 w-4 -rotate-90 text-brand-border" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <svg class="shrink-0 h-4 w-4 -rotate-90 text-[#D1D5DB]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <polyline points="6 9 12 15 18 9"></polyline>
               </svg>
               <a href="/" class="min-w-0 truncate text-brand-primary-700 hover:underline">VOL.U.LIFT Face Firming Cream</a>
