Finishing build PDP section with new prod carousel and faq section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <p>If you are looking to book a pharmacy appointment or access public services, please visit our Wigmore Pharmacy website.</p>
             </div>
 
-            <div class="flex md:flex-row flex-col gap-3 md:w-auto w-full">
+            <div class="flex xl:flex-row flex-col gap-3 md:w-auto w-full">
               <a href="#" class="button-primary">
                 Create a Professional Account
               </a>
