--- a/products.html
+++ b/products.html
@@ -131,7 +131,7 @@
       </div>
       <!-- PRODUCT CONTENT -->
       <div class="xl:col-span-5 md:col-span-6 col-span-full">
-        <div class="card-container-generic mb-3 xl:px-8 xl:py-10 md:px-4 md:py-6 px-3 pt-5 pb-3">
+        <div class="card-container-generic xl:px-8 xl:py-10 md:px-4 md:py-6 px-3 pt-5 pb-3">
           <div class="flex flex-col items-start gap-4">
             <!-- Breadcrumbs -->
             <nav class="md:flex hidden items-center gap-1.5 text-sm mb-2 w-full overflow-hidden">
@@ -294,6 +294,105 @@
       </div>
     </div>
 
+    <!-- SECTION: products (based on product-carousel) -->
+    <div
+      x-data="{
+        cards: 7,
+        loading: false
+      }"
+      x-init="$nextTick(() => {
+        new Swiper($refs.swiper, {
+          slidesPerView: 'auto',
+          spaceBetween: 16,
+          pagination: {
+            el: $refs.progressbar,
+            type: 'progressbar',
+          },
+          navigation: {
+            nextEl: $refs.next,
+            prevEl: $refs.prev,
+          }
+        })
+      })"
+      class="card-container bg-brand-light"
+    >
+      <div class="card-container-inner">
+        <div class="flex flex-col items-start justify-between gap-6">
+          <div class="flex md:flex-row flex-col gap-6 justify-between md:items-end items-center w-full mb-4">
+            <!-- Content -->
+            <div class="max-w-lg flex grow flex-col gap-4 md:items-start items-center md:text-left text-center justify-center">
+              <div class="badge-primary">Current Promotions</div>
+              <h1 class="heading-primary md:text-4xl text-2xl">Our Best Sellers</h1>
+              <p>Discover exclusive deals on prescription medicines, devices, and skincare, available only to verified Wigmore Medical account holders.</p>
+            </div>
+            <!-- Button -->
+            <div class="flex md:flex-row shrink-0 md:w-auto w-full flex-col gap-3">
+              <a href="#" class="cursor-pointer px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
+                View all Offers
+              </a>
+            </div>
+          </div>
+          <!-- Carousel -->
+          <div
+            class="w-full relative"
+          >
+            <div class="flex items-center gap-4">
+              <!-- Prev Arrow -->
+              <button x-ref="prev" class="absolute disabled:hidden xl:flex hidden -left-10 w-7 h-7 items-center justify-center border border-brand-primary-700 bg-white hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
+                <span class="icon icon-arrow w-3 h-3"></span>
+              </button>
+
+              <!-- Swiper Container -->
+              <div x-ref="swiper" class="swiper flex-1 right-overflow-visible-xl overflow-hidden">
+                <div class="swiper-wrapper">
+                  <!-- Product Cards -->
+                  <template x-for="i in cards" :key="i">
+                    <div class="swiper-slide md:w-75! w-66!">
+                      <load src="partials/components/product-card.html" />
+                    </div>
+                    <div class="swiper-slide md:w-75! w-66!">
+                      <load src="partials/components/product-card.html" />
+                    </div>
+                    <div class="swiper-slide md:w-75! w-66!">
+                      <load src="partials/components/product-card.html" />
+                    </div>
+                    <div class="swiper-slide md:w-75! w-66!">
+                      <load src="partials/components/product-card.html" />
+                    </div>
+                    <div class="swiper-slide md:w-75! w-66!">
+                      <load src="partials/components/product-card.html" />
+                    </div>
+                    <div class="swiper-slide md:w-75! w-66!">
+                      <load src="partials/components/product-card.html" />
+                    </div>
+                    <div class="swiper-slide md:w-75! w-66!">
+                      <load src="partials/components/product-card.html" />
+                    </div>
+                    <div class="swiper-slide md:w-75! w-66!">
+                      <load src="partials/components/product-card.html" />
+                    </div>
+                    <div class="swiper-slide md:w-75! w-66!">
+                      <load src="partials/components/product-card.html" />
+                    </div>
+                  </template>
+                </div>
+              </div>
+
+              <!-- Next Arrow -->
+              <button x-ref="next" class="absolute disabled:hidden -right-10 w-7 h-7 xl:flex hidden items-center justify-center border border-brand-primary-700 bg-white hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
+                <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
+              </button>
+            </div>
+
+            <!-- Progress Bar -->
+            <div x-ref="progressbar" class="swiper-pagination product-carousel-progress mt-8 h-1 bg-brand-border rounded-full overflow-hidden"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- SECTION: FAQ section -->
+    <load src="partials/home/faq-section.html" />
 
     <!-- SECTION: footer -->
     <load src="partials/home/footer.html" />
