Adding button animations sitewide

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
             <div class="flex xl:flex-row flex-col gap-3 md:w-auto w-full">
               <a href="#" class="button-primary">
-                Create a Professional Account
+                <span class="button-text" data-text="Create a Professional Account"><span>Create a Professional Account</span></span>
               </a>
               <a href="#" class="button-secondary">
-                Visit Wigmore Pharmacy
+                <span class="button-text" data-text="Visit Wigmore Pharmacy"><span>Visit Wigmore Pharmacy</span></span>
               </a>
             </div>
           </div>
@@ -128,7 +128,7 @@
                           </div>
                           <div class="shrink-0 md:w-auto w-full">
                             <a href="#" class="button-tertiary-icon">
-                              Read More
+                              <span class="button-text" data-text="Read More"><span>Read More</span></span>
                               <span>
                                 <span class="icon-arrow"></span>
                               </span>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="shrink-0 md:w-auto w-full">
                       <a href="#" class="button-tertiary-icon">
-                        View offers
+                        <span class="button-text" data-text="View offers"><span>View offers</span></span>
                         <span>
                           <span class="icon-arrow"></span>
                         </span>
