--- a/collections.html
+++ b/collections.html
@@ -32,8 +32,8 @@
         <!-- BLOCK 0: Selected Filters -->
         <div x-show="hasActiveFilters" class="card-container-small">
           <div class="flex items-center justify-between mb-3">
-            <span class="heading-primary text-lg text-brand-dark">Active Filters</span>
-            <button @click="clearAllFilters()" class="basic-link">Clear all</button>
+            <span class="heading-primary text-lg text-brand-dark">Filters</span>
+            <button @click="clearAllFilters()" class="basic-link mt-1">Clear all</button>
           </div>
           <div class="flex flex-wrap gap-1.5">
             <template x-for="filter in allSelectedFilters" :key="filter.type + '-' + filter.name">
@@ -414,7 +414,7 @@
                     <!-- Footer with Apply Button -->
                     <div class="px-5 py-4 border-t border-brand-border bg-white">
                       <button @click="mobileFiltersOpen = false" class="button-primary w-full">
-                        Apply Filters
+                        <span class="button-text" data-text="Apply Filters"><span>Apply Filters</span></span>
                       </button>
                     </div>
 
