--- a/products.html
+++ b/products.html
@@ -216,7 +216,7 @@
 
               <!-- CTA BUTTON -->
               <a href="#" class="button-primary flex-1">
-                View offer
+                <span class="button-text" data-text="View offer"><span>View offer</span></span>
               </a>
             </div>
 
@@ -328,7 +328,7 @@
             <!-- Button -->
             <div class="flex md:flex-row shrink-0 md:w-auto w-full flex-col gap-3">
               <a href="#" class="cursor-pointer px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
-                View all Offers
+                <span class="button-text" data-text="View All Offers"><span>View all Offers</span></span>
               </a>
             </div>
           </div>
