Moving alpine store into partial so it can load on every page

--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
   />
   <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
   <!-- Alpine Store -->
-  <script>
-    document.addEventListener('alpine:init', () => {
-      Alpine.store('prototype', {
-        loggedIn: true
-      })
-    })
-  </script>
+  <load src="partials/alpine-store.html" />
   <!-- Alpine + Plugins -->
   <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
