--- a/components.html
+++ b/components.html
@@ -14,6 +14,8 @@
     href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
   />
   <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+  <!-- Alpine Store -->
+  <load src="partials/alpine-store.html" />
   <!-- Alpine + Plugins -->
   <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
