Building account/bag dropdowns, fixing button animation blog/product

--- a/products.html
+++ b/products.html
@@ -334,8 +334,8 @@
             </div>
             <!-- Button -->
             <div class="flex md:flex-row shrink-0 md:w-auto w-full flex-col gap-3">
-              <a href="#" class="cursor-pointer px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
-                <span class="button-text" data-text="View All Offers"><span>View all Offers</span></span>
+              <a href="#" class="button-secondary">
+                <span class="button-text" data-text="View all articles"><span>View all articles</span></span>
               </a>
             </div>
           </div>
